--- a/launch.html
+++ b/launch.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Launching the Twitch desktop application...</h1>
+    <p>
+        NOTE: this is <b>NOT</b> the official Twitch desktop app, as an official one does not exist.
+    </p>
     <p>developed by <a href="https://github.com/devrusty">devrusty</a></p>
     <p>powered by <a href="https://electronjs.org">Electron.js</a></p>
     <style>
@@ -16,14 +19,12 @@
             margin: 0;
             background-color: #6441a5;
             font-family: sans-serif;
-        }
-
-        p {
             color: white;
+            text-align: center;
         }
 
         a {
-            color: #483d8b;
+            color: #9d95ce;
             text-decoration: none;
         }
     </style>
