--- a/launch.html
+++ b/launch.html
@@ -15,7 +15,7 @@
     <p>powered by <a href="https://electronjs.org">Electron.js</a></p>
     <style>
         body {
-            padding: 0;
+            padding: 12px;
             margin: 0;
             background-color: #6441a5;
             font-family: sans-serif;
