--- a/frontend/launch.html
+++ b/frontend/launch.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./global.css" rel="stylesheet">
     <title>Twitch Desktop - made by devrusty</title>
 </head>
 <body>
-    <img style="width: 64px" src="./icon.png">
+    <img style="width: 64px" src="../icon.png">
     <p id="splash-text"></p>
     <h1>Launching the Twitch desktop application...</h1>
     <p>
@@ -20,14 +21,7 @@
             padding: 12px;
             margin: 0;
             background-color: #6441a5;
-            font-family: sans-serif;
-            color: white;
             text-align: center;
-        }
-
-        a {
-            color: #9d95ce;
-            text-decoration: none;
         }
     </style>
     <script>
